# hr_edl_experiments

./: .gitignore  LICENSE.txt  Makefile  README.md  Vagrantfile  cor_gap_data.ipynb  gambit.ipynb  mal_cfr_data.ipynb  setup.cfg  setup.py
data/: efr.goofspiel.null.fixed.gen.ssv  efr.goofspiel.null.sim.gen.ssv  efr.goofspiel_3p.null.fixed.gen.ssv  efr.goofspiel_3p.null.sim.gen.ssv  efr.goofspiel_ascending.null.fixed.gen.ssv  efr.goofspiel_ascending.null.sim.gen.ssv  efr.goofspiel_ascending_3p.null.fixed.gen.ssv  efr.goofspiel_ascending_3p.null.sim.gen.ssv  efr.leduc.null.fixed.gen.ssv  efr.leduc.null.sim.gen.ssv  efr.random_goofspiel.null.fixed.gen.ssv  efr.random_goofspiel.null.sim.gen.ssv  efr.sheriff.null.fixed.gen.ssv  efr.sheriff.null.sim.gen.ssv  efr.tiny_bridge.null.fixed.gen.ssv  efr.tiny_bridge.null.sim.gen.ssv  efr.tiny_hanabi.null.fixed.gen.ssv  efr.tiny_hanabi.null.sim.gen.ssv  goofspiel.null.fixed.gen.ssv  goofspiel.null.shuffled.1.gen.ssv  goofspiel.null.shuffled.2.gen.ssv  goofspiel.null.shuffled.3.gen.ssv  goofspiel.null.shuffled.4.gen.ssv  goofspiel.null.shuffled.5.gen.ssv  goofspiel.null.sim.gen.ssv  kuhn_3p.null.fixed.gen.ssv  kuhn_3p.null.shuffled.1.gen.ssv  kuhn_3p.null.shuffled.2.gen.ssv  kuhn_3p.null.shuffled.3.gen.ssv  kuhn_3p.null.shuffled.4.gen.ssv  kuhn_3p.null.shuffled.5.gen.ssv  kuhn_3p.null.sim.gen.ssv  leduc.null.fixed.gen.ssv  leduc.null.shuffled.1.gen.ssv  leduc.null.shuffled.2.gen.ssv  leduc.null.shuffled.3.gen.ssv  leduc.null.shuffled.4.gen.ssv  leduc.null.shuffled.5.gen.ssv  leduc.null.sim.gen.ssv  random_goofspiel.null.fixed.gen.ssv  (+96 more)
hr_edl/: Makefile  README.md  Singularity.def  Vagrantfile
hr_edl/src/: CMakeLists.txt
hr_edl/src/hr_edl/: CMakeLists.txt  action_transformation.h  action_transformation_test.cc  adaptive_profile.h  best_response.cc  best_response.h  best_response_test.cc  containers.h  decision_point.cc  decision_point.h  decision_point_test.cc  enumeration.h  math.cc  math.h  policy.h  policy_evaluation.cc  policy_evaluation.h  policy_evaluation_test.cc  samplers.cc  samplers.h  spiel_extra.cc  spiel_extra.h  stopwatch.h  tabular_learner.h  test_extra.h  types.h
hr_edl_data/: experiment_parameters.py  tournament.py
mal_cfr_data/: __init__.py  experiment_parameters.py  gambit.py  plot.py  tournament.py
notebooks/: cor_gap_data.ipynb
results/: .gitignore
